# AutoReduce

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Objects tests in auto-reduce.ipynb  README.md  SBMLReduce.py  auto-reduce.py  auto_reduce.py  conf.py  gene_expression_bioCRNpyler-Copy1.ipynb  gene_expression_bioCRNpyler-with-input-param-running.ipynb  gene_expression_bioCRNpyler-without-inputs.ipynb  gene_expression_bioCRNpyler.ipynb  gene_expression_results.txt  gene_expression_results_new.txt  gene_expression_results_with_input.txt  layered feedback control circuit-no-inputs-Copy1.ipynb  layered feedback control circuit-no-inputs.ipynb  layered feedback control circuit.ipynb  local_sensitivity_analysis.py  michaelis-menten example.ipynb  population-control .ipynb  population_control.py  population_control_results.tex  pyproject.toml  pytest.ini  requirements.txt  setup.py  toggle-switch example.ipynb
IJRNC_examples/: gene expression analysis.ipynb  population-control.ipynb  toggle-switch example.ipynb
Tests/: README.md  TestingReadMe.txt  test_auto_reduce.py  test_local_sensitivity.py  test_ode.py  test_system.py  test_time_scale_separation.py
auto_reduce/: __init__.py  converters.py  local_sensitivity.py  model_reduction.py  ode.py  system.py  utils.py
autoreduce/: __init__.py  converters.py  local_sensitivity.py  model_reduction.py  ode.py  sbmlutil.py  system.py  utils.py
docs/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  requirements.txt  usage.rst
examples/: gene_expr_new_code.txt  (+21 more)
(+21 files in other folders)
